--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://louiskok8888:B1nnRbEP0ziWZodD@cluster0.yatyf.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 
 # MONGO_URI=mongodb+srv://louiskok8888:B1nnRbEP0ziWZodD@cluster0.yatyf.mongodb.net/yourDatabaseName?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=1234567890
